11270
{noformat}
<pastie>:27: p is not a valid implicit value for ImplicitParameter because:
candidate implicit value p in trait Problem is shadowed by value p in trait ProvidesImplicitParameter
         val _ = fn()
                   ^
<pastie>:27: error: could not find implicit value for parameter x: ImplicitParameter
         val _ = fn()
                   ^

{noformat}
